--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		<!-- Team Section -->
 		<section class="portfolio" id="portfolio"> 
 			<div class="portfolio-heading"> 
-				<h1 class="my-heading text-center">Featured Portfolio</h1> 
+				<h1 class="my-heading text-center">Team Members</h1> 
 			</div> 
 			<div class="portfolio-content"> 
 				<div class="my-row"> 
@@ -173,8 +173,9 @@
 								<img src="img/bg1.jpg"
 									alt="Web Design Image"> 
 							</div> 
-							<h3 class="greet-heading blue-text">Web Design</h3> 
-							<p class="small-para blue-text">Designing</p> 
+							<h3 class="greet-heading blue-text">Felix Obuya - C.E.O</h3> 
+							<p class="small-para blue-text">Software Engineer</p>
+							<p class="small-para blue-text">Software Engineer</p> 
 						</div> 
 					</div> 
 					<div class="my-col"> 
@@ -183,8 +184,8 @@
 								<img src="img/bg2.jpg"
 									alt="Web Design Image"> 
 							</div> 
-							<h3 class="greet-heading blue-text">Web Design</h3> 
-							<p class="small-para blue-text">Designing</p> 
+							<h3 class="greet-heading blue-text">Calvince Obuya - Ass. C.E.O</h3> 
+							<p class="small-para blue-text">Web Developer</p> 
 						</div> 
 					</div> 
 					<div class="my-col"> 
