--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 		</nav> 
 	</header> 
 
+	
+
 	<!-- Main hero banner -->
 	<section id="home" class="hero"> 
 		<div class="intro"> 
@@ -66,7 +68,7 @@
 				<h3 class="greet-heading">See It. Touch It. Obtain It...</h3> 
 				<h1 class="my-heading">FelTech Solutions</h1> 
 				<h1 class="sub-heading"> 
-					The Future Of Technology. 
+					The Future  Of  Technology. 
 				</h1> 
 			</div> 
 			<div class="intro-buttons"> 
@@ -172,7 +174,7 @@
 					<div class="my-col"> 
 						<div class="my-card port-card"> 
 							<div class="image1"> 
-								<img src="img/CEO.JPG"
+								<img src="img/CEO1.JPG"
 									alt="Web Design Image"> 
 							</div> 
 							<h3 class="greet-heading blue-text">Felix Obuya - C.E.O</h3> 
