--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 			<h4> 
 				Copyright © 2024 All rights reserved | 
 				This website is created 
-				by FelTech Solutions. 
+				by FelTech Solutions &trade; .
 			</h4> 
 			<div class="social-links"> 
 				<div class="footer-menu"> 
