link plot with a house

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 			crossorigin="anonymous" referrerpolicy="no-referrer" /> 
 	<link rel="stylesheet" href="style.css"> 
 	<link rel="stylesheet" href="responsive.css"> 
+	<script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init({
+        publicKey: "Ci2dEJQ8pB79Zfnbl",
+      });
+   })();
+</script>
+
 </head> 
 
 <body> 
@@ -116,7 +127,9 @@
 								alt="Web Design Image"> 
 						</div> 
 						<h3 class="greet-heading blue-text">Photo/Video Editing</h3> 
-						<p class="small-para blue-text">Designing</p> 
+						<p class="small-para blue-text">>Photography</p>
+						<p class="small-para blue-text">>Photo Editing</p>
+
 					</div> 
 				</div> 
 				
