--- a/index.html
+++ b/index.html
@@ -428,14 +428,14 @@
 				<h1 class="greet-heading">Get In Touch</h1> 
 				<form class="contact-form"> 
 					<input class="form-controls" type="text"
-						placeholder="Your Name"> 
+						placeholder="Your Name" id="name"> 
 					<input class="form-controls" type="text"
-						placeholder="Your Email"> 
+						placeholder="Your Email" id="email"> 
 					<input class="form-controls" type="text"
 						placeholder="Your Phone"> 
 					<textarea class="form-controls"
 							placeholder="Write your message"
-							name="message" id="" cols="30"
+							name="message" id="message" cols="30"
 							rows="10"> 
 					</textarea> 
 					<input class="form-btn btn common-btn"
