link plot with a house

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 							rows="10"> 
 					</textarea> 
 					<input class="form-btn btn common-btn"
-						type="submit" value="SEND MESSAGE"> 
+						type="submit" value="SEND MESSAGE" onclick="sendMail()"> 
 				</form> 
 			</div> 
 			<div class="contact-details"> 
